# project_y

./: CMakeLists.txt  README.md  build.bat
ENGINE_NAME/: CMakeLists.txt
ENGINE_NAME/include/: ENGINE_NAME.h
ENGINE_NAME/src/: camera.c  camera.h  constants.h  main.c  mat4x4.c  mat4x4.h  matrix4x4f.h  new_math.c  new_math.h  obj_loader.c  obj_loader.h  vec3.c  vec3.h  vec4.c  vec4.h  vec4f.c  vec4f.h
engine/: CMakeLists.txt
engine/include/: all.h  engine.h
engine/src/: additional_math.c  additional_math.h  camera.c  camera.h  constants.h  engine.c  engine.h  main.c  mat4x4.c  mat4x4.h  shader.c  shader.h  texture.c  texture.h  vec3.c
shaders/: default.frag  default.vert  light.frag  light.vert  phong_light.frag
src/: main.c
ukiyo/: CMakeLists.txt
ukiyo/src/: camera.c  camera.h  constants.h  engine.c  engine.h  mat4x4.c  mat4x4.h  random.c  random.h  shader.c  shader.h  texture.c  texture.h  ukiyo.h  vec3.c  vec3.h
